tests/scroll_corpus/errors/keyword_as_identifier.scroll
// Using a keyword as a variable name
scroll "bad" {
    description: "Should fail";
    require x: int;
    provide y: int;
    set for: int = 5;
}
